src/styles/custom.css
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  font: 12px/18px helvetica-neue, helvetica, arial, sans-serif;
  font-family: sans-serif;
  background-color: #000;
  color: #ffffff;
  margin: 0;
  padding: 0;
}

a {
  color: #ffffff;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

h3 {
  font-size: 11px;
}

.full-container {
  padding: 10px;
}

.container {
  width: 960px;
  margin: 0 auto;
}

